--- a/style.css
+++ b/style.css
@@ -77,10 +77,12 @@ h1{
 }
 .section1{
     display: flex;
-    padding: 30px;
+   padding-top: 5vw;
     justify-content: space-around;
-    margin-top: 5vw;
+    margin-top: 0vw;
     height: 80vh;
+   
+    width: 100%;
 }
 .section_div1{
     display: flex;
@@ -105,8 +107,10 @@ h1{
 .section2{
     display: flex;
     align-items: center;
-    padding: 55px;
-    justify-content: space-around;
+    padding: 5px;
+   justify-content: space-around;
+  
+    height: 50vh;
    
 }
 .section2 p{
@@ -176,14 +180,14 @@ height: 150vh;
    line-height: 1.5rem;
    color: rgb(125, 133, 125);
 }
-.grid span{
+ .ab{
 padding-left: 35px;
  display: flex;
  color: rgb(125, 133, 125);
  padding-top: 16px;
 
 }
-.grid span:before{
+.ab:before{
     content: '\25a0';
     color: rgb(0, 128, 122);
     padding-right: 10px;
@@ -217,22 +221,25 @@ padding-left: 35px;
     font-size: large;
    
 }
+
 .list2 {
     display: flex;
     flex-direction: column;
     row-gap:30px;
     margin-right: 8vw;
-   margin-top: 15vh; 
+   margin-top: 10vh; 
     width: 35vw;
-   
+    
    
 }
 ol{
     display: flex;
     flex-direction: column;
-    row-gap: 35px;
-   margin-left: 3vw;
+    row-gap: 25px;
+  
     font-size: 20px;
+    list-style: none;
+   
 }
  .list2 h3 {
    font-size: 30px;
@@ -240,10 +247,16 @@ ol{
 }
 .list2 p{
     font-size: large;
+    margin-left: 4.5vw;
 
 }
-.list2 span{
-    color: rgb(53, 216, 135);
+.list2 h4{
+   
+    margin-left: 1.5vw;
+}
+.list2 div:hover{
+    cursor: pointer;
+    color: #14bf98;
 }
 .section4_2a{
     width:50vw;
@@ -252,6 +265,10 @@ ol{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+#rockey:hover{
+    cursor: pointer;
+    color: #14bf98;
 }
 .section5{
     width: 100%;
@@ -417,22 +434,18 @@ ol{
     justify-content: space-around;
 }
 form{
-    display: flex;
-    flex-direction: column;
-    width: 30vw;
+  width: 30vw;
    
     row-gap: 3vh;
-}
-form input{
    
-    height: 13vh;
+    display: flex;
+    flex-direction: column;
 }
-form button{
-    width: 30vw;
-    height:15vh ;
-    color: white;
-    background-color: #14bf98;
+  form input{
+    height: 9vh;
+  
 }
+
 .f7 ul ,p{
     margin-top: 2vw;
     list-style: none;
@@ -445,4 +458,18 @@ form button{
 .f7 ul{
     text-decoration: underline;
     line-height: 1.5rem;
+}
+button:hover{
+    cursor: pointer;
+    background-color: transparent;
+    color: black;
+    border: 2px solid green;
+}
+.footer1 button{
+    color: white;
+}
+.footer3 button:hover{
+    color: white;
+    background-color: #14bf98;
+    border: none;
 }
